# devpost_redhat

./: Dockerfile  DockerfileAI  README.md  pyproject.toml  run-ollama.sh  settings-dev.yaml  settings.yaml
src/devpost_redhat/: main.py
src/devpost_redhat/config/: app_config.py
src/devpost_redhat/controller/: user.py
